--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>SimpleSnake</title>
+    <title>TinySnake</title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" type="text/css" href="simplesnake.css">
+    <link rel="stylesheet" type="text/css" href="tinysnake.css">
   </head>
   <body>
     <h3>Score: <span>0</span></h3>
     <div></div>
-    <script src="simplesnake.js"></script>
+    <script src="tinysnake.js"></script>
   </body>
 </html>
