--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <h3>Score: <span>0</span></h3>
     <div></div>
+    <a href="https://github.com/Alaricus/TinySnake" class="tag">
+      The 'Tiny' Challenge
+      <br>
+      View project on GitHub
+    </a>
     <script src="tinysnake.js"></script>
   </body>
 </html>
