--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h3>Score: <span>0</span></h3>
     <div></div>
     <a href="https://github.com/Alaricus/TinySnake" class="tag">
-      The 'Tiny' Challenge
+      The Tiny Challenge
       <br>
       View project on GitHub
     </a>
